--- a/linaria-project-app/package.json
+++ b/linaria-project-app/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.18.6",
+    "react-router-dom": "^6.9.0",
     "webpack-cli": "^5.0.1"
   }
 }
